--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,5 +1,5 @@
 body{
-  background-color: rgb(9, 153, 209);
+  background-color: rgb(21, 78, 100);
 }
 #cabecalho{
   border: 1px solid black;
@@ -25,22 +25,19 @@ body{
 
 #interface{
   width: 200px;
-  height: 176px;
+  height: 76px;
   display: block;
   float: left;
   margin-top: 0px;
   margin-left: -10px;
   margin-right: 0px;
   padding-top: 8px;
-  padding-left: 0px;
-  padding-bottom: 235px;
-  padding-right: 0px;
 }
 
 #menu{
-  background-color: rgb(9, 153, 209);
+  background-color: rgb(20, 74, 124);
   width: 180;
-  height: 740px;
+  height: 509px;
   border: 1px solid black;
   margin-top: -9px;
   margin-bottom: 0px;
@@ -56,6 +53,7 @@ body{
   padding-left: 10px;
   padding-bottom: 60px;
   text-align: left;
+  font-size: 12px;
   color: rgb(51, 47, 47);
   transition: 0.5s;
 }
@@ -82,25 +80,24 @@ a:hover{
   display: block;
   float: right;
   position: absolute;
-  width: 1080px;
-  height: 740px;
+  width: 1079px;
+  height: 509px;
   margin-left: 189px;
   margin-top: -1px;
-  overflow: hidden;
   border: 1px solid black;
 }
 
 #rodape{
   display: block;
   position: absolute;
-  top: 860px;
+  top: 629px;
   width: 100%;
   border-top: 1px solid black;
   background-color: rgb(58, 57, 57);
   text-align: center;
   color: white;
   text-shadow: 1px 1px 1px black;
-  padding-top: 30px;
+  padding-top: 10px;
   padding-bottom: 25px;
   margin-right: -20px;
   margin-bottom: -10;
