--- a/_css/servicos.css
+++ b/_css/servicos.css
@@ -1,4 +1,5 @@
 body{
+  background-color: rgb(73, 182, 255);
   width: 920;
   font-family: arial;
   font-size: 15px;
@@ -12,18 +13,20 @@ p{
   text-indent: 15px;
 }
 article h1{
-  font-size: 18px;
+  text-align: center;
+  font-size: 30px;
   color: white;
-  background-color: gray;
+  text-shadow: 2px 2px 1px black;
   padding: 5px;
-  margin: 0px;
+  margin: -10px;
 }
+
 article h2{
-  font-size: 17px;
+  font-size: 25px;
   color: rgb(122, 117, 117);
   margin: 0px;
 }
 article{
-  margin-bottom: 400pt;
+  margin-bottom: 450pt;
   overflow: none;
 }
