--- a/_css/specs.css
+++ b/_css/specs.css
@@ -1,35 +1,31 @@
 body{
   background-color: rgb(73, 182, 255);
 }
+h1{
+  background-color: rgb(36, 34, 34);
+  text-align: center;
+  color: beige;
+  text-shadow: 2px 2px 1px black;
+}
 #principalspec{
   overflow: hidden;
 }
 #conteudo{
   display: block;
-  width: 1000px;
+  width: 300px;
   margin: auto;
   overflow: hidden;
   box-shadow: 2px 2px 1px black;
 }
 #img1{
-  box-shadow: 10px 10px 1px black;
+  box-shadow: 5px 5px 1px black;
+  border-radius: 5px 5px 5px 5px;
 }
 .frame{
   display: block;
-  width: 960px;
-  height: 300px;
+  width: 400px;
+  height: 400px;
   border: none;
-}
-article{
-  display: block;
   float: right;
-  margin: 0px;
-  text-align: center;
-  color: red;
-  padding-top: 60px;
-  padding-right: 50px;
 }
-article h2{
-  font-size: 17px;
-  margin: 0px;
-}
+
